--- a/index.html
+++ b/index.html
@@ -65,7 +65,89 @@
 		}
 	</style>
 </head>
+<head>
+	<title></title>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"><!--[if mso]>
+<xml><w:WordDocument xmlns:w="urn:schemas-microsoft-com:office:word"><w:DontUseAdvancedTypographyReadingMail/></w:WordDocument>
+<o:OfficeDocumentSettings><o:PixelsPerInch>96</o:PixelsPerInch><o:AllowPNG/></o:OfficeDocumentSettings></xml>
+<![endif]-->
+	<style>
+		* {
+			box-sizing: border-box;
+		}
 
+		body {
+			margin: 0;
+			padding: 0;
+		}
+
+		a[x-apple-data-detectors] {
+			color: inherit !important;
+			text-decoration: inherit !important;
+		}
+
+		#MessageViewBody a {
+			color: inherit;
+			text-decoration: none;
+		}
+
+		p {
+			line-height: inherit
+		}
+
+		.desktop_hide,
+		.desktop_hide table {
+			mso-hide: all;
+			display: none;
+			max-height: 0px;
+			overflow: hidden;
+		}
+
+		.image_block img+div {
+			display: none;
+		}
+
+		sup,
+		sub {
+			font-size: 75%;
+			line-height: 0;
+		}
+
+		@media (max-width:768px) {
+			.image_block div.fullWidth {
+				max-width: 100% !important;
+			}
+
+			.mobile_hide {
+				display: none;
+			}
+
+			.row-content {
+				width: 100% !important;
+			}
+
+			.stack .column {
+				width: 100%;
+				display: block;
+			}
+
+			.mobile_hide {
+				min-height: 0;
+				max-height: 0;
+				max-width: 0;
+				overflow: hidden;
+				font-size: 0px;
+			}
+
+			.desktop_hide,
+			.desktop_hide table {
+				display: table !important;
+				max-height: none !important;
+			}
+		}
+	</style><!--[if mso ]><style>sup, sub { font-size: 100% !important; } sup { mso-text-raise:10% } sub { mso-text-raise:-10% }</style> <![endif]--><!--[if true]><style>.forceBgColor{background-color: white !important}</style><![endif]-->
+</head>
 
 <body class="body forceBgColor" style="background-color: transparent; margin: 0; padding: 0; -webkit-text-size-adjust: none; text-size-adjust: none;">
 	<table class="nl-container" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: transparent;">
@@ -149,9 +231,9 @@
 												<td class="column column-2" width="50%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; padding-bottom: 5px; padding-top: 5px; vertical-align: top;">
 													<table class="image_block block-1" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
 														<tr>
-															<td class="pad" style="padding-bottom:15px;width:100%;">
+															<td class="pad" style="padding-bottom:15px;width:100%;padding-right:0px;padding-left:0px;">
 																<div class="alignment" align="left">
-																	<div style="max-width: 450px;"><img src="https://d15k2d11r6t6rl.cloudfront.net/pub/bfra/9rvrdc12/wqz/wxu/qb5/image%20418.jpg" style="display: block; height: auto; border: 0; width: 100%; border-radius: 22px;" width="450" alt title height="auto"></div>
+																	<div class="fullWidth" style="max-width: 450px;"><img src="https://d15k2d11r6t6rl.cloudfront.net/pub/bfra/9rvrdc12/wqz/wxu/qb5/image%20418.jpg" style="display: block; height: auto; border: 0; width: 100%; border-radius: 22px;" width="450" alt title height="auto"></div>
 																</div>
 															</td>
 														</tr>
@@ -179,12 +261,12 @@
 														<tr>
 															<td class="pad">
 																<div class="alignment" align="center"><!--[if mso]>
-<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word"   style="height:124px;width:878px;v-text-anchor:middle;" arcsize="4%" fillcolor="#ffffff">
+<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word"   style="height:186px;width:878px;v-text-anchor:middle;" arcsize="3%" fillcolor="#ffffff">
 <v:stroke dashstyle="Solid" weight="1px" color="#000000"/>
 <w:anchorlock/>
 <v:textbox inset="0px,0px,0px,0px">
-<center dir="false" style="color:#000000;font-family:sans-serif;font-size:19px">
-<![endif]--><span class="button" style="background-color: #ffffff; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-radius: 4px; border-right: 1px solid #000000; border-top: 1px solid #000000; color: #000000; display: inline-block; font-family: Arial, Helvetica, sans-serif; font-size: 19px; font-weight: 400; mso-border-alt: none; padding-bottom: 5px; padding-top: 5px; padding-left: 20px; padding-right: 20px; text-align: center; width: auto; word-break: keep-all; letter-spacing: normal;"><span style="word-break: break-word; line-height: 38px;">콩팥(Kidney), 이름처럼 콩과 팥을 닮은 장기.한자로는 '신장(腎臟)'이라고도 불리지만,요즘은 <strong>'콩팥'이라는 순우리말</strong>을 더 많이 사용합니다.‘신부전’도 이제는 일상에서 ‘콩팥병’으로 부르는 추세입니다. &nbsp;<br><strong>콩팥, 얼마나 알고 계신가요?</strong></span></span><!--[if mso]></center></v:textbox></v:roundrect><![endif]--></div>
+<center dir="false" style="color:#000000;font-family:sans-serif;font-size:22px">
+<![endif]--><span class="button" style="background-color: #ffffff; border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-radius: 4px; border-right: 1px solid #000000; border-top: 1px solid #000000; color: #000000; display: inline-block; font-family: Arial, Helvetica, sans-serif; font-size: 22px; font-weight: 400; mso-border-alt: none; padding-bottom: 5px; padding-top: 5px; padding-left: 20px; padding-right: 20px; text-align: center; width: auto; word-break: keep-all; letter-spacing: normal;"><span style="word-break: break-word; line-height: 44px;">콩팥(Kidney), 이름처럼 콩과 팥을 닮은 장기.한자로는 '신장(腎臟)'이라고도 불리지만,요즘은 <strong>'콩팥'이라는 순우리말</strong>을 더 많이 사용합니다.‘신부전’도 이제는 일상에서 ‘콩팥병’으로</span><span style="word-break: break-word; line-height: 44px;"><br>부르는 추세입니다. &nbsp;<br><strong>콩팥, 얼마나 알고 계신가요?</strong></span></span><!--[if mso]></center></v:textbox></v:roundrect><![endif]--></div>
 															</td>
 														</tr>
 													</table>
@@ -219,9 +301,9 @@
 													</table>
 													<table class="image_block block-2" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
 														<tr>
-															<td class="pad" style="padding-bottom:10px;padding-top:5px;width:100%;">
+															<td class="pad" style="padding-bottom:10px;padding-top:5px;width:100%;padding-right:0px;padding-left:0px;">
 																<div class="alignment" align="center">
-																	<div style="max-width: 289px;"><img src="https://d15k2d11r6t6rl.cloudfront.net/pub/bfra/9rvrdc12/oj5/07e/1ve/image%20416.jpg" style="display: block; height: auto; border: 0; width: 100%;" width="289" alt title height="auto"></div>
+																	<div class="fullWidth" style="max-width: 405px;"><img src="https://d15k2d11r6t6rl.cloudfront.net/pub/bfra/9rvrdc12/oj5/07e/1ve/image%20416.jpg" style="display: block; height: auto; border: 0; width: 100%;" width="405" alt title height="auto"></div>
 																</div>
 															</td>
 														</tr>
@@ -245,7 +327,7 @@
 													<table class="paragraph_block block-1" width="100%" border="0" cellpadding="10" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">
 														<tr>
 															<td class="pad">
-																<div style="color:#101112;direction:ltr;font-family:Arial, Helvetica, sans-serif;font-size:19px;font-weight:400;letter-spacing:0px;line-height:1.2;text-align:center;mso-line-height-alt:23px;">
+																<div style="color:#101112;direction:ltr;font-family:Arial, Helvetica, sans-serif;font-size:23px;font-weight:400;letter-spacing:0px;line-height:1.2;text-align:center;mso-line-height-alt:28px;">
 																	<p style="margin: 0; margin-bottom: 16px;">위치: <strong>좌우 각각 1개씩, 횡격막 아래 등 쪽 복막 뒤</strong></p>
 																	<p style="margin: 0; margin-bottom: 16px;">크기: 길<strong>이 약 11~12cm, 무게는 양쪽 합쳐 300g</strong></p>
 																	<p style="margin: 0; margin-bottom: 16px;">모양: <strong>강낭콩 형태</strong></p>
@@ -315,7 +397,7 @@
 														<tr>
 															<td class="pad" style="width:100%;padding-right:0px;padding-left:0px;">
 																<div class="alignment" align="center">
-																	<div style="max-width: 146px;"><img src="https://d15k2d11r6t6rl.cloudfront.net/pub/bfra/9rvrdc12/0qg/qf1/k12/image%20426.jpg" style="display: block; height: auto; border: 0; width: 100%;" width="146" alt title height="auto"></div>
+																	<div style="max-width: 214px;"><img src="https://d15k2d11r6t6rl.cloudfront.net/pub/bfra/9rvrdc12/0qg/qf1/k12/image%20426.jpg" style="display: block; height: auto; border: 0; width: 100%;" width="214" alt title height="auto"></div>
 																</div>
 															</td>
 														</tr>
@@ -326,7 +408,7 @@
 														<tr>
 															<td class="pad" style="width:100%;padding-right:0px;padding-left:0px;">
 																<div class="alignment" align="center">
-																	<div style="max-width: 146px;"><img src="https://d15k2d11r6t6rl.cloudfront.net/pub/bfra/9rvrdc12/t2k/npl/xjl/image%20427.jpg" style="display: block; height: auto; border: 0; width: 100%;" width="146" alt title height="auto"></div>
+																	<div style="max-width: 214px;"><img src="https://d15k2d11r6t6rl.cloudfront.net/pub/bfra/9rvrdc12/t2k/npl/xjl/image%20427.jpg" style="display: block; height: auto; border: 0; width: 100%;" width="214" alt title height="auto"></div>
 																</div>
 															</td>
 														</tr>
@@ -353,7 +435,7 @@
 													<table class="paragraph_block block-1" width="100%" border="0" cellpadding="10" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">
 														<tr>
 															<td class="pad">
-																<div style="color:#101112;direction:ltr;font-family:Arial, Helvetica, sans-serif;font-size:20px;font-weight:400;letter-spacing:0px;line-height:1.2;text-align:center;mso-line-height-alt:24px;">
+																<div style="color:#101112;direction:ltr;font-family:Arial, Helvetica, sans-serif;font-size:23px;font-weight:400;letter-spacing:0px;line-height:1.2;text-align:center;mso-line-height-alt:28px;">
 																	<p style="margin: 0;"><strong>&nbsp; &nbsp;노폐물 제거 </strong>→&nbsp; <strong>혈액 속 노폐물을 걸러 소변으로 배출</strong></p>
 																</div>
 															</td>
@@ -363,7 +445,7 @@
 														<tr>
 															<td class="pad">
 																<div class="alignment" align="center">
-																	<div class="fullWidth" style="max-width: 360px;"><img src="https://d15k2d11r6t6rl.cloudfront.net/pub/bfra/9rvrdc12/7q4/cg0/eyq/Frame%205477.jpg" style="display: block; height: auto; border: 0; width: 100%;" width="360" alt title height="auto"></div>
+																	<div class="fullWidth" style="max-width: 495px;"><img src="https://d15k2d11r6t6rl.cloudfront.net/pub/bfra/9rvrdc12/7q4/cg0/eyq/Frame%205477.jpg" style="display: block; height: auto; border: 0; width: 100%;" width="495" alt title height="auto"></div>
 																</div>
 															</td>
 														</tr>
@@ -387,9 +469,9 @@
 													<table class="paragraph_block block-1" width="100%" border="0" cellpadding="25" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">
 														<tr>
 															<td class="pad">
-																<div style="color:#101112;direction:ltr;font-family:Arial, Helvetica, sans-serif;font-size:20px;font-weight:400;letter-spacing:0px;line-height:1.2;text-align:center;mso-line-height-alt:24px;">
-																	<p style="margin: 0; margin-bottom: 16px;"><strong>항상성 유지 </strong>→ 체내 상태를 일정하게 유지 , <strong>호르몬·효소 분비 </strong>→ 혈압 조절·적혈구 생성 등</p>
-																	<p style="margin: 0;"><strong>삼투압 조절 </strong>→ 물과 전해질 균형 유지 , <strong>혈압 조절 </strong>→ 혈류량 조절을 통해 관리</p>
+																<div style="color:#101112;direction:ltr;font-family:Arial, Helvetica, sans-serif;font-size:23px;font-weight:400;letter-spacing:0px;line-height:1.2;text-align:center;mso-line-height-alt:28px;">
+																	<p style="margin: 0; margin-bottom: 16px;"><strong>항상성 유지 </strong>→ 체내 상태를 일정하게 유지 <strong>호르몬·효소 분비 </strong>→ 혈압 조절·적혈구 생성&nbsp;</p>
+																	<p style="margin: 0;"><strong>삼투압 조절 </strong>→ 물과 전해질 균형 유지&nbsp; <strong>혈압 조절 </strong>→ 혈류량 조절을 통해 관리</p>
 																</div>
 															</td>
 														</tr>
@@ -430,7 +512,7 @@
 													<table class="paragraph_block block-1" width="100%" border="0" cellpadding="10" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">
 														<tr>
 															<td class="pad">
-																<div style="color:#101112;direction:ltr;font-family:Arial, Helvetica, sans-serif;font-size:19px;font-weight:400;letter-spacing:0px;line-height:1.2;text-align:center;mso-line-height-alt:23px;">
+																<div style="color:#101112;direction:ltr;font-family:Arial, Helvetica, sans-serif;font-size:23px;font-weight:400;letter-spacing:0px;line-height:1.2;text-align:center;mso-line-height-alt:28px;">
 																	<p style="margin: 0; margin-bottom: 16px;"><strong>주의!</strong></p>
 																	<p style="margin: 0;">콩팥은 <strong>한 번 손상되면 회복이 어렵습니다.</strong><br>자연치유가 되지 않기 때문에, 평소 관리가 무엇보다 중요합니다.</p>
 																</div>
